# practical-epidemics

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT  Dockerfile  LICENSE  README.md  pyproject.toml
docker-build/: Dockerfile
site/source/: conf.py  index.md  index.rst
site/source/epidemics/: continuous_time_epidemics.ipynb  index.md  index.rst
site/source/iddinf/: 01-epi-refresher.ipynb  01_epi_refresher.ipynb  02-intro-to-gemlib.ipynb  02_intro_to_gemlib.ipynb  03-likelihood-theory-1.ipynb  03_likelihood_theory_1.ipynb  04-epidemic-likelihoods.ipynb  04_epidemic_likelihoods.ipynb  06-bayesian-inference-1.ipynb  06_bayesian_inference_1.ipynb  07-bayesian-inference-2.ipynb  07_bayesian_inference_2.ipynb  08-intro-to-mcmc.ipynb  08_intro_to_mcmc.ipynb  10-mh-implementation.ipynb  10_mh_implementation.ipynb  11-data-augmentation-mcmc-1.ipynb  11_data_augmentation_mcmc_1.ipynb  12-data-augmentation-mcmc-2.ipynb  12_data_augmentation_mcmc_2.ipynb  13-particle-filters-2.ipynb  13_particle_filters_1.md  14-particle-filters-2.ipynb  14_particle_filters_2.ipynb  15-VL-case-study.ipynb  15-case-study.ipynb  15_end_to_end.ipynb  16_case_study.ipynb  i-intro-to-python-1.ipynb  i_intro_to_python_1.ipynb  ii-intro-to-python-2.ipynb  ii_intro_to_python_2.ipynb  index.md
site/source/iddinf/case_studies/: index.md
site/source/iddinf/data/: coords.csv
site/source/iddinf/introduction/: index.md  unified_epi_models.ipynb
site/source/iddinf/likelihoods/: index.md  intro_to_likelihoods.ipynb
site/source/iddinf/mcmc/: index.md
site/source/iddinf/smc/: index.md
site/source/notebooks/: implementing_epidemics.ipynb  intro_to_tensorflow.ipynb
site/source/software/: index.md  index.rst  intro_to_tensorflow.ipynb  tfp_mwg.ipynb
