[tool.poetry]
name = "practical-epidemics"
version = "0.1.0"
description = ""
authors = ["Chris Jewell <c.jewell@lancaster.ac.uk>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jinja2 = "~3.0.3"
matplotlib = "^3.5.1"
tensorflow = "^2.12.0"
nbsphinx = "^0.8.8"
tensorflow-probability = "^0.19.0"
sphinx-book-theme = "^1.1.3"
myst-nb = "^1.1.1"
sphinx-design = "^0.6.1"
scipy = "^1.14.1"


[tool.poetry.dev-dependencies]
pydot = "^1.4.2"
jupyterlab = "^3.2.9"


[tool.poetry.group.dev.dependencies]
jupytext = "^1.16.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
