[tool.poetry]
name = "practical-epidemics"
version = "0.1.0"
description = ""
authors = ["Chris Jewell <c.jewell@lancaster.ac.uk>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jinja2 = "~3.0.3"
tensorflow-probability = "^0.24.0"
tensorflow = "^2.17.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
gemlib = "^0.11.1"
tf-keras = "^2.17.0"
pandas = "^2.2.2"
sphinx-book-theme = "^1.1.3"
myst-nb = "^1.1.1"
sphinx-design = "^0.6.1"
linkify-it-py = "^2.0.3"
sphinx-exercise = {git = "https://github.com/executablebooks/sphinx-exercise.git", rev = "v1.0.0"}
sphinx-togglebutton = "^0.3.2"


[tool.poetry.dev-dependencies]
pydot = "^1.4.2"
jupyterlab = "^3.2.9"


[tool.poetry.group.dev.dependencies]
jupytext = "^1.16.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
